--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,7 +2,7 @@
     <ul>
         {% for repo in site.data.repos %}
         <li class="repo-name">
-            <a href="/{{ repo.name }}">{{ repo.name | capitalize }}</a>
+            <a href="/docs/{{ repo.name }}">{{ repo.name | capitalize }}</a>
             <ul>
                 {% for section in repo.sections %}
                 <li>
