--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,4 +1,4 @@
-<div id="sidebar" class="col-md-3 col-lg-2 d-md-block">
+<div id="sidebar" class="col-md-3 col-lg-2 d-md-block" data-bs-theme="dark">
     <div class="position-sticky pt-3">
         <h2 class="text-center mb-3">Packages</h2>
         <ul class="nav flex-column">
