[Add] shadow for part of page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
             </main>
         </div>
     </div>
-    <footer class="bg-dark text-light py-3 mt-4">
+    <footer class="bg-dark text-light py-3 mt-4 border-top shadow-sm">
         <div class="container text-center">
             <p class="mb-0">© 2024 Gouef Documentation. All rights reserved.</p>
         </div>
