--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,3 +14,12 @@ body {
 .navbar-brand {
     font-weight: bold;
 }
+
+table {
+    tr {
+        td {
+            padding: 5px 10px;
+            border: solid 2px;
+        }
+    }
+}
